# avhud

./: .gitignore  CMakeLists  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/app/: App.cpp  App.h
src/audio/: AudioCapture.cpp  AudioCapture.h
src/core/: AudioData.h  EngineState.h  State.h
src/engine/: AudioEngine.cpp  AudioEngine.h
src/renderer/: OverlayWindow.cpp  OverlayWindow.h  Renderer.cpp  Renderer.h
tests/: CMakeLists.txt
tests/audio/: AudioAnalyzerTests.cpp
